# ALICE-Search

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
benches/: search_bench.rs
bindings/ue5/: AliceSearch.h
bindings/unity/: AliceSearch.cs
examples/: full_text_search.rs
src/: analytics_bridge.rs  bitvec.rs  bwt.rs  cache_bridge.rs  db_bridge.rs  ffi.rs  lib.rs  search.rs  text_bridge.rs  wavelet.rs
