[package]
name = "alice-search"
version = "0.1.0"
edition = "2021"
authors = ["Moroya Sakamoto"]
description = "FM-Index based full-text search. Compressed and fast."
license = "AGPL-3.0"
repository = "https://github.com/ext-sakamoro/ALICE-Search"
keywords = ["search", "fm-index", "bwt", "compression", "alice"]
categories = ["algorithms", "compression", "text-processing"]
publish = false

[features]
default = ["std"]
std = ["alloc"]
alloc = []
text = ["dep:alice-text", "std"]         # ALICE-Text compressed text search
analytics = ["dep:alice-analytics", "std"]  # ALICE-Analytics search query metrics
db = ["dep:alice-db", "std"]  # ALICE-DB search metrics persistence
cache = ["dep:alice-cache", "std"]  # ALICE-Cache search result caching

[dependencies]
alice-text = { path = "../ALICE-Text", optional = true }
alice-analytics = { path = "../ALICE-Analytics", optional = true, default-features = false, features = ["std"] }
alice-db = { path = "../ALICE-DB", optional = true, default-features = false }
alice-cache = { path = "../ALICE-Cache", optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "search_bench"
harness = false

[[example]]
name = "full_text_search"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
